--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <!-- ✅ Open Graph (for social sharing previews) -->
     <meta
       property="og:title"
-      content="Rashmi Kumari | Software Engineer"
+      content="Rashmi Kumari | Portfolio"
     />
     <meta
       property="og:description"
